--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,16 +97,17 @@
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
+        android:layout_marginLeft="10dp"
         android:text="DB"
         android:textColor="@color/black"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_marginLeft="10dp"/>
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -116,13 +117,14 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="70dp"
+            android:layout_width="60dp"
             android:layout_height="32dp"
+            android:drawableLeft="@drawable/gender"
             android:gravity="center"
-            android:text="Gender"
             android:textColor="@color/black"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_marginLeft="13dp"/>
 
         <RadioButton
             android:id="@+id/radioButtonMale"
@@ -143,6 +145,17 @@
             android:text="Female" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:layout_marginLeft="10dp"
+        android:text="Gender"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
     <Button
         android:id="@+id/registerButton"
         android:layout_width="150dp"
@@ -150,12 +163,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-
         android:layout_marginLeft="130dp"
-        android:layout_marginTop="30dp"
-        android:background="@color/colorAccent"
+        android:layout_marginTop="10dp"
+        android:background="@color/black"
         android:text="Register"
-        android:textColor="@color/black"
+        android:textColor="@color/teal_700"
         android:textSize="24sp" />
 
 
