--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,8 +70,55 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="85dp"
+            android:layout_height="32dp"
+            android:layout_marginStart="13dp"
+            android:gravity="center"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:drawableStartCompat="@drawable/gender" />
+
+        <RadioButton
+            android:id="@+id/radioButtonMale"
+            android:layout_width="124dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="0dp"
+            android:layout_weight="1"
+            android:drawableStart="@drawable/male"
+            android:text="@string/male" />
+
+        <RadioButton
+            android:id="@+id/radioButtonFemale"
+            android:layout_width="129dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_weight="1"
+            android:drawableStart="@drawable/female"
+            android:text="@string/female" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=" Gender"
+        android:textColor="@color/black"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="5dp"
+        >
 
         <TextView
             android:layout_width="25dp"
@@ -116,13 +163,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
         <Switch
             android:id="@+id/switch3"
             style="@style/switchStyle"
-            android:layout_width="122dp"
+            android:layout_width="118dp"
             android:layout_marginLeft="10dp"
             android:drawableStart="@drawable/book"
             android:text="@string/study"
@@ -143,45 +190,6 @@
             style="@style/switchStyle"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="96dp"
-            android:layout_height="32dp"
-            android:layout_marginStart="13dp"
-            android:gravity="center"
-            android:text="@string/gender"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:drawableStartCompat="@drawable/gender" />
-
-        <RadioButton
-            android:id="@+id/radioButtonMale"
-            android:layout_width="124dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="0dp"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/male"
-            android:text="@string/male" />
-
-        <RadioButton
-            android:id="@+id/radioButtonFemale"
-            android:layout_width="129dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:layout_weight="1"
-            android:drawableStart="@drawable/female"
-            android:text="@string/female" />
     </LinearLayout>
 
     <CheckBox
