--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -177,7 +177,7 @@
         <Switch
             android:id="@+id/switch3"
             style="@style/switchStyle"
-            android:layout_width="130dp"
+            android:layout_width="126dp"
             android:layout_marginLeft="10dp"
             android:drawableStart="@drawable/book"
             android:text="@string/study"
@@ -198,7 +198,7 @@
             android:layout_width="wrap_content"
             android:layout_height="34dp"
             android:layout_marginStart="5dp"
-            android:drawableStart="@drawable/couple"
+            android:drawableStart="@drawable/ring"
             android:text=" Married"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
