--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -75,7 +75,7 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="79dp"
+            android:layout_width="64dp"
             android:layout_height="32dp"
             android:layout_marginStart="13dp"
             android:gravity="center"
@@ -92,7 +92,7 @@
 
             <RadioButton
                 android:id="@+id/radioButtonMale"
-                android:layout_width="124dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40dp"
                 android:layout_marginEnd="0dp"
@@ -125,7 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         >
 
         <TextView
@@ -175,7 +175,7 @@
         android:orientation="horizontal">
 
         <Switch
-            android:id="@+id/switch3"
+            android:id="@+id/studentSwitch"
             style="@style/switchStyle"
             android:layout_width="126dp"
             android:layout_marginLeft="10dp"
@@ -184,7 +184,7 @@
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         <Switch
-            android:id="@+id/switch2"
+            android:id="@+id/workSwitch"
             style="@style/switchStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -193,7 +193,7 @@
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/marriedSwitch"
             style="@style/switchStyle"
             android:layout_width="wrap_content"
             android:layout_height="34dp"
@@ -205,7 +205,7 @@
     </LinearLayout>
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/agreecheckBox"
         android:layout_width="202dp"
         android:layout_height="32dp"
         android:layout_marginStart="120dp"
