--- a/app/src/main/res/layout/activity_profile_information.xml
+++ b/app/src/main/res/layout/activity_profile_information.xml
@@ -42,7 +42,7 @@
         android:drawableLeft="@drawable/ic_email"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameTxt"
         app:layout_constraintVertical_bias="0.09" />
@@ -55,10 +55,10 @@
         android:drawableLeft="@drawable/ic_phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTxt"
-        app:layout_constraintVertical_bias="0.197" />
+        app:layout_constraintVertical_bias="0.217" />
 
     <TextView
         android:id="@+id/calendarTxt"
@@ -71,7 +71,7 @@
         app:layout_constraintHorizontal_bias="0.041"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/genderTxt"
-        app:layout_constraintVertical_bias="0.461" />
+        app:layout_constraintVertical_bias="0.428" />
 
     <TextView
         android:id="@+id/passwordTxt"
@@ -81,22 +81,23 @@
         android:drawableLeft="@drawable/ic_lock"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.042"
+        app:layout_constraintHorizontal_bias="0.01"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/phoneTxt"
-        app:layout_constraintVertical_bias="0.036" />
+        app:layout_constraintVertical_bias="0.037" />
 
     <LinearLayout
-        android:layout_width="377dp"
-        android:layout_height="43dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="368dp"
+        android:layout_height="40dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
-        app:layout_constraintVertical_bias="0.06">
+        app:layout_constraintVertical_bias="0.033">
 
         <Switch
             android:id="@+id/studySwitch"
@@ -141,6 +142,21 @@
         app:layout_constraintHorizontal_bias="0.036"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailTxt"
-        app:layout_constraintVertical_bias="0.161" />
+        app:layout_constraintVertical_bias="0.169" />
+
+    <Button
+        android:id="@+id/backRegisterButton"
+        android:layout_width="301dp"
+        android:layout_height="57dp"
+        android:background="@color/black"
+        android:onClick="back_register_onClick"
+        android:text="Back To Registeter"
+        android:textColor="@color/teal_700"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
