--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,13 @@
         <item name="android:textSize">18dp</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    <style name="but">
+        <item name="android:layout_width">301dp</item>
+        <item name="android:layout_height">57dp</item>
+        <item name="android:background">@color/black</item>
+        <item name="android:textColor">@color/teal_700</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
