--- a/app/src/main/res/layout/activity_profile_information.xml
+++ b/app/src/main/res/layout/activity_profile_information.xml
@@ -88,8 +88,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="368dp"
-        android:layout_height="40dp"
+        android:layout_width="369dp"
+        android:layout_height="41dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -97,7 +97,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
-        app:layout_constraintVertical_bias="0.033">
+        app:layout_constraintVertical_bias="0.046">
 
         <Switch
             android:id="@+id/studySwitch"
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/book"
             android:gravity="center"
-            android:text="@string/study"
+            android:text="  Study"
             android:textSize="14sp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
@@ -116,7 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/work"
-            android:text="@string/work"
+            android:text=" Work"
             android:textSize="14sp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
@@ -126,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ring"
-            android:text="@string/married"
+            android:text=" Married"
             android:textSize="14sp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
     </LinearLayout>
