--- a/app/src/main/res/layout/activity_registeration.xml
+++ b/app/src/main/res/layout/activity_registeration.xml
@@ -124,6 +124,7 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
         android:text="@string/gender"
         android:textColor="@color/black"
         android:textStyle="bold" />
@@ -187,7 +188,7 @@
             android:layout_width="126dp"
             android:layout_marginStart="10dp"
             android:drawableStart="@drawable/book"
-            android:text="@string/study"
+            android:text=" Study"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         <Switch
@@ -196,7 +197,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/work"
-            android:text="@string/work"
+            android:text=" Work"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
         <Switch
@@ -206,7 +207,7 @@
             android:layout_height="34dp"
             android:layout_marginStart="5dp"
             android:drawableStart="@drawable/ring"
-            android:text="@string/married"
+            android:text=" Married"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     </LinearLayout>
